# file-batch-system

./: .be-acceptance-state  .dockerignore  .env.example  .flattened-pom.xml  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .squawk.toml  .trivyignore  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  dependency-check-suppressions.xml  docker-compose.app.yml  docker-compose.kafka-ha.yml  docker-compose.observability.yml  docker-compose.test.yml  docker-compose.yml  pom.xml  start-all.sh  stop-all.sh
.claude/: settings.local.json
batch-worker-sdk-rust/: Cargo.toml
batch-worker-sdk-rust/src/: decide.rs  lib.rs
batch-worker-sdk-rust/src/client/: consumer.rs  handler.rs  testkit.rs
batch-worker-sdk-rust/tests/: conformance.rs  constants_parity.rs
batch-worker-sdk-rust/tests/support/: json.rs
examples/self-hosted-sdk/sample-tenant-worker-python/: README.md  pyproject.toml
examples/self-hosted-sdk/sample-tenant-worker-python/src/sample_tenant_worker/: __main__.py  main.py
examples/self-hosted-sdk/sample-tenant-worker-rust/: Cargo.toml  README.md
examples/self-hosted-sdk/sample-tenant-worker-rust/src/: main.rs
sdk-python/: .gitignore  README.md  mypy.ini  pyproject.toml  ruff.toml
sdk-python/src/batch_worker_sdk/: __init__.py  _directive.py  _http.py  _kafka.py  _lifecycle.py  _scheduler.py  _version.py  cancellation.py  client.py  config.py  context.py  decorator.py  dispatcher.py  exceptions.py  handler.py  progress.py  runner.py
sdk-python/src/batch_worker_sdk/client/: __init__.py  client.py  config.py
sdk-python/src/batch_worker_sdk/dispatcher/: __init__.py  dispatcher.py  runner.py
sdk-python/src/batch_worker_sdk/handler/: __init__.py  _atomic.py  _base.py  _decorator.py  _dispatch.py  _export.py  _import.py  _process.py  handler.py
sdk-python/src/batch_worker_sdk/handler/atomic/: __init__.py  _http.py  _shell.py  _sql.py  _stored_proc.py
sdk-python/src/batch_worker_sdk/handler/builtin/: __init__.py  _delimited.py  _file_import.py  _http_dispatch.py  _query_export.py  _row_result.py
sdk-python/src/batch_worker_sdk/handler/typed/: __init__.py  _typed_dispatch.py  _typed_export.py  _typed_import.py  _typed_parameters.py  _typed_process.py  _typed_task_handler.py
sdk-python/src/batch_worker_sdk/internal/: __init__.py  _http.py  _kafka.py  _lifecycle.py  _sensitive_keys.py
sdk-python/src/batch_worker_sdk/retry/: __init__.py  _retry.py
sdk-python/src/batch_worker_sdk/scheduler/: __init__.py  _directive.py  _heartbeat.py  _lease.py
sdk-python/src/batch_worker_sdk/task/: __init__.py  cancellation.py  context.py  descriptor.py  progress.py  result.py  state.py
sdk-python/src/batch_worker_sdk/testkit/: __init__.py  fake_platform.py  fixtures.py
sdk-python/tests/: conftest.py  test_cancellation.py  test_client.py  test_config_validation.py  test_decorator.py  test_directive.py  test_dispatcher.py  test_dispatcher_cancellation.py  test_heartbeat_scheduler.py  test_http_client.py  test_kafka_consumer.py  test_kafka_sasl_fail_fast.py  test_lease_renewal_scheduler.py  test_lifecycle.py  test_progress.py  test_retry.py  test_shared_constants_parity.py  test_smoke.py  test_surface.py
sdk-python/tests/contract/: README.md  test_contract_runner.py  test_testkit_integration.py
sdk-python/tests/handler/: __init__.py  conftest.py  test_abstract_atomic_handler.py  test_abstract_dispatch_handler.py  test_abstract_export_handler.py  test_abstract_handlers_contract.py  test_abstract_import_handler.py  test_abstract_process_handler.py  test_abstract_task_handler.py  test_decorator_isolation.py  test_golden_samples.py  test_handler_contract.py  test_inheritance_chain.py  test_result_contract.py  test_row_result.py
sdk-python/tests/handler/atomic/: test_http.py  test_shell.py  test_sql.py  test_stored_proc.py
sdk-python/tests/handler/builtin/: test_file_import.py  test_http_dispatch.py  test_query_export.py
sdk-python/tests/handler/typed/: _helpers.py  test_typed_dispatch.py  test_typed_export.py  test_typed_import.py  test_typed_parameters.py  test_typed_process.py  test_typed_task_handler.py
sdk-python/tests/scheduler/: test_heartbeat_hint_clamp.py
sdk-python/tests/testkit/: test_fake_platform.py  test_fixtures.py
sdk/python/: README.md  pyproject.toml
sdk/python/scripts/: run-contract.sh
sdk/python/src/batch_worker_sdk/: __init__.py  exceptions.py
sdk/python/src/batch_worker_sdk/client/: __init__.py  client.py  config.py  metrics.py
sdk/python/src/batch_worker_sdk/dispatcher/: __init__.py  dispatcher.py  runner.py
sdk/python/src/batch_worker_sdk/handler/: __init__.py  _base.py  _decorator.py  _dispatch.py  _export.py  handler.py
sdk/python/src/batch_worker_sdk/idempotent/: __init__.py  _entity.py  _handler.py  _key_resolver.py  _store.py
sdk/python/tests/: conftest.py  test_client.py  test_dispatcher.py  test_dispatcher_cancellation.py  test_dispatcher_schema_versions.py  test_exceptions.py  test_http_client.py  test_kafka_consumer.py  test_kafka_live_integration.py  test_kafka_sasl_fail_fast.py  test_lease_renewal_scheduler.py  test_metrics.py  test_shared_constants_parity.py  test_signing_conformance.py  test_surface.py
sdk/python/tests/contract/: README.md  __init__.py  test_contract_runner.py  test_testkit_integration.py  test_wire_heartbeat.py  test_wire_report.py
sdk/python/tests/handler/: __init__.py  test_abstract_import_handler.py  test_abstract_task_handler.py  test_golden_samples.py  test_handler_contract.py  test_result_contract.py  test_row_result.py
sdk/python/tests/idempotent/: test_checkpoint.py  test_idempotent.py
sdk/python/tests/testkit/: test_pytest_plugin.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: constants.rs  decide.rs  kafka.rs  lib.rs  protocol.rs
sdk/rust/src/client/: checkpoint.rs  consumer.rs  handler.rs  lifecycle.rs  mod.rs  reqwest_transport.rs  resilience.rs  scheduler.rs  sensitive.rs  signing.rs  testkit.rs  transport.rs
sdk/rust/tests/: conformance.rs  constants_parity.rs  contract.rs  runtime.rs
(+9554 files in other folders)
