[package]
name = "batch-worker-sdk"
version = "1.1.0"
edition = "2021"
description = "BYO worker SDK decision core + conformance runner (Rust reference impl, zero-dependency)"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/pinpols/file-batch-system"
homepage = "https://github.com/pinpols/file-batch-system/tree/main/sdk/rust"
keywords = ["batch", "worker", "sdk", "kafka", "conformance"]
categories = ["api-bindings"]
# Keep the publishable crate lean: tests/ are conformance harnesses that read
# repo-relative fixtures and are not needed by downstream crates.
exclude = ["tests/"]

[lib]
name = "batch_worker_sdk"
path = "src/lib.rs"

# The default build is zero-dependency: the decision core, the conformance
# runner, the constants-parity test, and the minimal JSON / YAML parsers are all
# std-only. The OPTIONAL `kafka` feature (phase-3 adapter, src/kafka.rs) is the
# only thing that pulls external crates, and only when explicitly enabled.
[features]
# Opt-in serde derives for the ADR-037 checkpoint types (`SdkCheckpointState`,
# `JsonValue`). Off by default so the core build stays zero-dependency; pulled in
# transitively by `kafka`/`http`. When enabled, `JsonValue` round-trips as plain
# JSON (wire-compatible with the Java `Map<String,Object>` break position).
serde = ["dep:serde", "dep:serde_json"]
# Real Kafka consumer adapter (rdkafka). Off by default → default build stays
# std-only and the phase-1/2 tests are unaffected.
kafka = ["dep:rdkafka", "serde", "dep:serde_json"]
# Real blocking control-plane HTTP transport (reqwest). Off by default → the
# core crate stays dependency-light. `rustls-tls` avoids OpenSSL; `serde` +
# `serde_json` are pulled for ergonomic JSON (de)serialize with ignore-unknown.
http = ["dep:reqwest", "serde", "dep:serde_json"]

[dependencies]
# All optional + behind a feature. `default-features = true` on rdkafka keeps
# the upstream runtime defaults; `cmake-build` avoids librdkafka's legacy
# configure/make path misdetecting Apple Silicon as x86_64.
rdkafka = { version = "0.36", optional = true, default-features = true, features = ["cmake-build"] }
# reqwest behind `http`: blocking client, JSON helpers, rustls (no OpenSSL).
reqwest = { version = "0.12", optional = true, default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }

[dev-dependencies]
futures-executor = "0.3"
