[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sample-tenant-worker-python"
version = "0.1.0a0"
description = "Sample Python tenant worker using batch-worker-sdk (P5 Lane V)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    # Locally develop against the sibling SDK source — `pip install -e .`
    # in this directory after editable-installing batch-worker-sdk picks
    # up live changes. PyPI release will bump to "batch-worker-sdk>=0.5".
    "batch-worker-sdk",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sample_tenant_worker"]
