[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sample-tenant-worker-python"
version = "0.1.0a0"
description = "Sample Python tenant worker using batch-worker-sdk (P5 Lane V)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    # Locally develop against the sibling SDK source — editable-install the SDK first
    # (`pip install -e sdk/python`), then `pip install -e .` here picks up live changes.
    # Distribution name is "batch-worker-sdk" (see sdk/python/pyproject.toml [project].name
    # and README `pip install batch-worker-sdk`); depending on "batch-worker-sdk-python"
    # fails with "No matching distribution found".
    "batch-worker-sdk",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sample_tenant_worker"]
